# sequenceAlignment

./: ChangeLog.md  README.md  package.yaml  sequenceAlignement.cabal
app/: Main.hs
lib/: Alignment.hs  Lib.hs  Rendering.hs
src/: Lib.hs
