cabal-version: 1.12

name:           sequenceAlignement
version:        0.1.0.0
description:    An implementation of local and global alignment algorithms as a way to practice dynamic programming on concrete problems.
author:         Aloïs 'baub' RAUTUREAU

library
  exposed-modules:
      Alignment, Rendering
  other-modules:
      Paths_sequenceAlignement
  hs-source-dirs:
      lib
  build-depends:
      base >=4.7 && <5, array, gloss
  default-language: Haskell2010

executable sequenceAlignement-exe
  main-is: Main.hs
  other-modules:
      Paths_sequenceAlignement
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , sequenceAlignement
    , array
    , gloss
  default-language: Haskell2010
